@@ -16,6 +16,8 @@ Features added
 Bugs fixed
 ----------
 
+* #8936: LaTeX: A custom LaTeX builder fails with unknown node error
+
 Testing
 --------
 
